--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Humayun Sayyed</h1>
-      <p>I'm <span class="typed" data-typed-items="Writter, Developer, Reasearcher"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Writer, Developer, Reasearcher"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/humayunsyd" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/humayun-syd" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -83,7 +83,7 @@
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
               Driven Undergraduate student with exceptional communication and analytics skills.
-              I am a Writter, Reasearcher, Contact Creator and Developer.
+              I am a Writer, Reasearcher, Contact writer and Developer.
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -343,7 +343,7 @@
   <footer id="footer">
     <div class="container">
       <h3> <img src="assets/img/logo.png" height="100em" width="100em">Humayun Sayyed</img></h3>
-      <p>Writer ✨ | Reasearcher 🧑‍💻| Content Writer ✍️ </p>
+      <p>Writer ✨ | Reasearcher 🧑‍💻| Content Writer | Developer ✍️ </p>
       <div class="social-links">
         <a href="https://twitter.com/humayunsyd" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/humayun-syd" target="_blank" class="github"><i class="bx bxl-github"></i></a>
